--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="citation-item">
                     <div class="head-item">
                         <div class="item-person">
-                            <img src="/img/Ellips.png" alt="Людмила Говорова">
+                            <img src="./img/Ellips.png" alt="Людмила Говорова">
                             <div class="item-name">
                                 <h5>Людмила Говорова</h5>
                                 <span>8 г.</span>
@@ -209,7 +209,7 @@
                         </h6>
                         <div class="icon-content">
                            <div class="icon-img">
-                            <img src="/img/image.png" alt="Avocardine">
+                            <img src="./img/image.png" alt="Avocardine">
                            </div>
                         </div>
                     </div>
